--- a/templates/objectives/user/objectives_dashboard_user.html
+++ b/templates/objectives/user/objectives_dashboard_user.html
@@ -42,7 +42,9 @@
         <i class="form-icon bi bi-person-circle"></i>
         <div class="form-name">
           <div class="fw-semibold">{{ user_name }}</div>
-          <small>cantidad de objetivos</small>
+            <div class="ms-auto">
+              <span class="badge rounded-pill bg-light text-primary">0 objetivos</span>
+            </div>
         </div>
       </div>
 
