--- a/templates/objectives/user/create_objective.html
+++ b/templates/objectives/user/create_objective.html
@@ -61,6 +61,8 @@
               <select name="measure_type" class="form-select">
                 <option value="binary">Binario</option>
                 <option value="percent">Porcentaje</option>
+                <option value="numeric">Numérico</option>
+                <option value="currency">Monetario</option>
               </select>
             </div>
 
