direccionamiento correcto para los objetivos

--- a/templates/objectives/admin/cycle_form.html
+++ b/templates/objectives/admin/cycle_form.html
@@ -105,7 +105,7 @@
 
     <!-- Footer botones -->
     <div class="d-flex justify-content-between mt-4">
-      <a id="btnPrev" href="{% url 'obj_cycles_admin' %}" class="btn btn-outline-secondary">
+      <a id="btnPrev" href="{% url 'objective_view' %}" class="btn btn-outline-secondary">
         Anterior
       </a>
 
