--- a/templates/objectives/admin/objectives_dashboard_admin.html
+++ b/templates/objectives/admin/objectives_dashboard_admin.html
@@ -39,7 +39,7 @@
             <div class="dropdown">
               <a class="btn btn-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">⋮</a>
               <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item" href="#">Editar</a></li>
+                <li><a class="dropdown-item" href="{% url 'obj_cycle_edit' c.id %}">Editar</a></li>
                 <li><a class="dropdown-item" href="#">Participación</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
