--- a/templates/recognitions/admin/recognition_dashboard_admin.html
+++ b/templates/recognitions/admin/recognition_dashboard_admin.html
@@ -16,7 +16,7 @@
             name="q"
             value="{{ q }}"
             class="form-control"
-            placeholder="🔍 Buscar por título de categoría">
+            placeholder="🔍 Buscar por título de reconocimiento">
     </div>
   </form>
 
