--- a/templates/tools/loan_calculator_view.html
+++ b/templates/tools/loan_calculator_view.html
@@ -80,9 +80,9 @@
             </button>
           </div>
           <div class="text-center mb-3">
-            <p class="text-muted small mb-0">
+            {% comment %} <p class="text-muted small mb-0">
               No se podrá solicitar un nuevo préstamo a partir de...
-            </p>
+            </p> {% endcomment %}
           </div>
         </div>
       </div>
