--- a/templates/forms_requests/admin/request_form_admin.html
+++ b/templates/forms_requests/admin/request_form_admin.html
@@ -247,7 +247,7 @@
               </div>
 
               <div class="col-4">
-                <label class="form-label">Número de empleado</label>
+                <label class="form-label">N. de empleado</label>
                 <input class="form-control" name="numero" placeholder="00000">
               </div>
               <div class="col-8">
@@ -274,7 +274,7 @@
                 <input class="form-control" name="puesto" placeholder="(PUESTO)">
               </div>
               <div class="col-6">
-                <label class="form-label">Fecha de inicio (antigüedad)</label>
+                <label class="form-label">Fecha de inicio</label>
                 <input class="form-control" name="antiguedad" placeholder="(FECHA DE INICIO)">
               </div>
 
@@ -300,9 +300,6 @@
                 <input class="form-control" name="fecha_hoy" placeholder="dd/mm/aaaa">
               </div>
               <div class="col-12">
-                <div class="form-text">
-                  La vista previa se actualiza sola. “Imprimir” abre el PDF en una pestaña nueva.
-                </div>
               </div>
             </div>
           </div>
