nueva imagen en la pestaña

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -4,6 +4,10 @@
 <html lang="es">
 
 <head>
+<link rel="icon" type="image/png" sizes="32x32" href="{% static 'template/img/logos/logo_sencillo.png' %}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% static 'template/img/logos/logo_sencillo.png' %}">
+
+
 <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
 <style>
   /* Botón flotante */
